[project]
name = "chaos-network-simulator"
version = "0.1.0"
description = "Controlled network fault injection and simulation"
authors = [{ name = "Resilient Networking" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
chaos-sim = "chaos_network_simulator.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
