[project]
name = "config-rollout"
version = "1.0.0"
description = "Typed config and gradual rollout helpers"
authors = [{ name = "Resilient Networking" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
