[project]
name = "connection-multiplexer"
version = "0.1.0"
description = "Resilient connection management and multiplexing across transports"
authors = [{ name = "Resilient Networking" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.4", "anyio>=4.0"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
