[project]
name = "crypto-envelope"
version = "1.0.0"
description = "Signing and encryption envelope with key rotation hooks"
authors = [{ name = "Resilient Networking" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["cryptography>=41.0.0"]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
